--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,14 @@ spring.application.name=astra
 spring.data.mongodb.database=kirana-yhs-api
 #spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${MONGO_PASSWORD}@${env.MONGO_CLUSTER}
 spring.data.mongodb.uri=mongodb+srv://checking001:qwertyuiop@cluster0.dbyn0px.mongodb.net
+server.port=8081
+# Security Configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/Kirana
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+
+# JWT Configuration
+jwt.auth.converter.resource-id=yashwanth
+jwt.auth.converter.principal-attribute=principal_username
+
+# Logging Configuration
+logging.level.org.springframework.security=DEBUG
